<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/traffic_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="24dp"
        android:layout_marginLeft="24dp"
        android:text="@string/traffic"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/traffic_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/traffic_text"
        android:layout_below="@+id/traffic_text"
        android:layout_marginLeft="24dp"
        android:text="@string/zeros"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/traffic_unit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/traffic_text"
        android:layout_toRightOf="@+id/traffic_amount"
        android:text="@string/mb"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/price_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/traffic_text"
        android:layout_below="@+id/traffic_amount"
        android:text="@string/price"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/price_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/price_text"
        android:layout_below="@+id/price_text"
        android:layout_marginLeft="24dp"
        android:text="@string/zeros"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/price_unit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/price_text"
        android:layout_toRightOf="@+id/price_amount"
        android:text="@string/ft"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>